--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
+    "dev": "strapi develop",
     "start": "strapi start",
+    "watch": "strapi develop --watch-admin",
     "build": "strapi build",
     "strapi": "strapi"
   },
